# NuMaker-Zephyr-TFLM-ObjectDetection

./: CMakeLists.txt  Kconfig  PORTING_NOTES.rst  README.rst  hyperram.ld  prj.conf
boards/: numaker_m55m1.overlay
src/: BoardInit.cpp  InferenceTask.cpp  InferenceTask.hpp  main.cpp
src/Device/Display/: Display.c  drv_pdma.c
src/Device/Display/LCD/: LCD_LT7381.c
src/Device/HyperRAM/: hyperram_code.c
src/Device/ImageSensor/: ImageSensor.c
src/Model/: yolo-fastest_int8.tflite.cpp  yolo-fastest_int8_ethos-u55-256_opt-size.tflite.cpp  yolo-fastest_int8_ethos-u55-256_opt-speed.tflite.cpp
src/NPU/: ethosu_npu_init.c  ethosu_profiler.c
src/ProfilerCounter/: pmu_counter.c  pmu_counter.c.bak
src/ml-embedded-evaluation-kit_clone/application_main/include/: BufAttributes.hpp
src/ml-embedded-evaluation-kit_clone/log/include/: log_macros.h
src/ml-embedded-evaluation-kit_clone/math/: PlatformMath.cc
src/ml-embedded-evaluation-kit_clone/profiler/include/: Profiler.hpp
